# sprucekit-mobile

./: .gitignore  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  Package.resolved  Package.swift  README.md  SpruceIDMobileSdk.podspec  SpruceIDMobileSdkRs.podspec  SpruceIDMobileSdkRsRustFramework.podspec  project.yml
.github/workflows/: cd.yml  ci.yml  mobile_sdk_ios_app_push.yml  mobile_sdk_kt_ci.yml  mobile_sdk_kt_push.yml  mobile_sdk_rs_ci.yml  mobile_sdk_rs_push.yml  mobile_sdk_swift_ci.yml  mobile_sdk_swift_push.yml  monorepo_ci.yml
Sources/MobileSdk/: BLEConnection.swift  Credential.swift  CredentialPack.swift  Credentials.swift  GenericJSON.swift  IsoMdlPresentation.swift  MDoc.swift  MDocBLEUtils.swift  MDocHolderBLECentral.swift  MDocReader.swift  MDocReaderBLEPeripheral.swift  OID4VCI.swift  StorageManager.swift
Tests/MobileSdkTests/: DataConversions.swift
android/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
android/MobileSdk/: build.gradle.kts
flutter/: CLAUDE.md  pubspec.yaml
flutter/example/: README.md  (+1 more)
ios/: CLAUDE.md  check-swift-licenses.py
mobile-sdk-ios-app/: CONTRIBUTING.md  README.md  project.yml
mobile-sdk-rs/: Cargo.toml  Makefile.toml  Package.swift  README.md
mobile-sdk-swift/: CONTRIBUTING.md  Package.resolved  Package.swift  README.md  SpruceIDMobileSdk.podspec  project.yml
rust/: .gitignore  CLAUDE.md  Cargo.toml  build-ios.sh  deny.toml  uniffi.toml
rust/mobile-toolkit/: Cargo.toml  uniffi.toml
rust/mobile-toolkit/src/: common.rs  crypto.rs  http_client.rs  lib.rs  storage_manager.rs
scripts/: build_xcframeworks.sh
(+719 files in other folders)
